# pyExpireBackups

./: .project  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
expirebackups/: expire.py  version.py
scripts/: blackisort  doc
search/: search_index.json
tests/: testexpirebackups.py
