[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyExpireBackups"
description = "Automated cleanup and expiration of backup files based on age and retention rules."
keywords = ["backup", "retention", "cleanup", "automation"]
authors = [
  { name = "Wolfgang Fahl", email = "wf@WolfgangFahl.com" }
]
maintainers = [
  { name = "Wolfgang Fahl", email = "wf@WolfgangFahl.com" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dynamic = ["version"]

dependencies = [
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: System :: Archiving :: Backup",
  "Topic :: Utilities"
]

[project.urls]
Home = "https://github.com/WolfgangFahl/pyExpireBackups"
Documentation = "https://wiki.bitplan.com/index.php/pyExpireBackups"
Source = "https://github.com/WolfgangFahl/pyExpireBackups"

[project.optional-dependencies]
test = [
  "pytest>=8.4.0",
  "green>=3.3.0",
  "tox>=4.15.0",
]
dev = [
  "black>=25.1.0",
  "isort>=6.0.1",
]

[tool.hatch.version]
path = "expirebackups/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
only-include = ["expirebackups"]

[tool.hatch.build.targets.wheel.sources]
"expirebackups" = "expirebackups"

[tool.black]
line-length = 120

[project.scripts]
expirebackups = "expirebackups.expire:main"
